# lejepa

./: .gitignore  CHANGELOG.md  CLEANUP_SUMMARY.md  LeJEPACodebaseReview.md  MINIMAL.md  PERFORMANCE_ANALYSIS.md  README.md  pyproject.toml  setup.py
adapter/: README.md  __init__.py  bench_lejepa_adapter.py  lejepa_adapter.py
figures/: 2d_slicing.py  3d_sobolev.py  nonparametric_example.py  teaser_manifold.py  teaser_manifold_2d.py  teaser_manifold_3d.py
lejepa/: utils.py
lejepa/multivariate/: base.py  bhep.py  bhep_m.py  comb.py  hv.py  hz.py  slicing.py
lejepa/univariate/: epps_pulley.py  jarque_bera.py  likelihood.py  moments.py  shapiro_wilk.py
tests/: standalone.py  test_anderson_darling.py  test_bhep.py  test_cramer_von_mises.py  test_epps_pulley.py  test_hz.py  test_jarque_bera.py  test_shapiro_wilk.py  test_utils.py  test_watson.py
